[package]
name = "database-interaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.3.1"
tokio = "1.23.0"
actix-cors = "0.6.4"
redis = "0.22.1"
serde = "1.0.152"
dotenvy = "0.15.6"